modules/gdscript/tests/scripts/parser/errors/oninstantiated_with_static.gd
extends Node

@oninstantiated static var node

func test():
	pass
